# danmu-cli

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
danmu_cli/: __init__.py  __main__.py  base.py  main.py  service.py  util.py
danmu_cli/presenters/: __init__.py  default.py  plain.py
danmu_cli/providers/: __init__.py  bilibili.py  douyu.py  fake.py  huya.py
danmu_cli/providers/bilibili_content/: models.py  service.py
