[tool.poetry]
name = "danmu-cli"
version = "0.0.1"
description = "Maybe a cross-platform danmu CLI"
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = "^3.7.3"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
