[tool.poetry]
name = "danmu-cli"
version = "0.0.1"
description = "Maybe a cross-platform danmu CLI"
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
license = "AGPL-3.0-only"
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = "^3.7.3"
pydantic = "^1.7.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
dephell = "^0.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.extras]
qt = ['qasync', 'pyside2']

[tool.poetry.scripts]
danmu-cli = 'danmu_cli.main:main'
